--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Upload build to S3
       uses: jakejarvis/s3-sync-action@master
       with:
-        args: --acl public-read --follow-symlinks --delete
+        args: --follow-symlinks --delete
       env:
         SOURCE_DIR: './dist'
         AWS_S3_BUCKET: jjtracking-${{ github.event.inputs.environment }}  # Bucket names are differentiated by environment
