--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,9 @@
 name: Build and Deploy to S3
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       environment:
@@ -11,6 +14,7 @@ on:
           - integration
           - staging
           - production
+        default: 'integration'
 
 jobs:
   build-and-upload:
@@ -48,7 +52,7 @@ jobs:
         args: --follow-symlinks --delete
       env:
         SOURCE_DIR: './dist'
-        AWS_S3_BUCKET: jjtracking-${{ github.event.inputs.environment }}  # Bucket names are differentiated by environment
+        AWS_S3_BUCKET: jjtracking-${{ github.event.inputs.environment }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
